@@ -28,10 +28,13 @@ ACE_RCSID (tao,
 //
 #define TAO_CODESET_ID_ISO8859_1 0x00010001U
 #define TAO_CODESET_ID_UNICODE   0x00010109U
+#define TAO_CODESET_ID_XOPEN_UTF_8 0x05010001U
 
 // These are the default codesets that TAO declares, of course they
 // will be different on each platform, once the complete support for
 // character sets is implemented
+
+//#define TAO_DEFAULT_CHAR_CODESET_ID  TAO_CODESET_ID_XOPEN_UTF_8
 #define TAO_DEFAULT_CHAR_CODESET_ID  TAO_CODESET_ID_ISO8859_1
 #define TAO_DEFAULT_WCHAR_CODESET_ID TAO_CODESET_ID_UNICODE
 
@@ -451,24 +454,12 @@ TAO_Codeset_Manager::init_codeset_factories_i (
   return 0;
 }
 
+
 TAO_Codeset_Translator_Factory *
 TAO_Codeset_Manager::get_char_trans (CONV_FRAME::CodeSetId tcs)
 {
   if (this->codeset_info_.ForCharData.native_code_set == tcs)
-    {
-      if (tcs != ACE_CODESET_ID_ISO_UTF_16)
-        return 0;
-      else
-        {
-          if (this->utf16_bom_translator_ == 0)
-            {
-              this->utf16_bom_translator_ =
-                ACE_Dynamic_Service <UTF16_BOM_Factory>::instance ("UTF16_BOM_Factory");
-            }
-          return this->utf16_bom_translator_;
-        }
-    }
-
+    return 0;
   return this->get_translator_i (this->char_factories_,tcs);
 }
 
@@ -477,11 +468,25 @@ TAO_Codeset_Manager::get_wchar_trans (CONV_FRAME::CodeSetId tcs)
 {
   if (this->codeset_info_.ForWcharData.native_code_set == tcs)
     {
-      return 0;
+      if (tcs != ACE_CODESET_ID_ISO_UTF_16)
+        return 0;
+      else
+        {
+          if (TAO_debug_level > 9)
+            ACE_DEBUG ((LM_DEBUG,
+                        ACE_LIB_TEXT("TAO (%P|%t) Using utf16 BOM translator\n")));
+          if (this->utf16_bom_translator_ == 0)
+            {
+              this->utf16_bom_translator_ =
+                ACE_Dynamic_Service <UTF16_BOM_Factory>::instance ("UTF16_BOM_Factory");
+            }
+          return this->utf16_bom_translator_;
+        }
     }
-
   return this->get_translator_i (this->wchar_factories_,tcs);
 }
+
+
 
 TAO_Codeset_Translator_Factory *
 TAO_Codeset_Manager::get_translator_i (TAO_CodesetFactorySet& factset,
